# FlowerTune-LLM-Labs

./: .gitignore  README.md
FlowerTune-LLM-Coding/: cookiecutter.json
FlowerTune-LLM-Coding/{{cookiecutter.directory_name}}/: README.md  pyproject.toml
FlowerTune-LLM-Coding/{{cookiecutter.directory_name}}/flowertune_code/: models.py
templates/FlowerTune-LLM-Coding/: cookiecutter.json
templates/FlowerTune-LLM-Coding/{{cookiecutter.directory_name}}/: README.md  pyproject.toml
templates/FlowerTune-LLM-Medical/: cookiecutter.json
templates/FlowerTune-LLM-Medical/{{cookiecutter.directory_name}}/: README.md  pyproject.toml
templates/FlowerTune-LLM-Medical/{{cookiecutter.directory_name}}/{{ cookiecutter.project_slug }}/: models.py
terraform/: README.md
terraform/coding_infra/: main.tf
terraform/infra_example/: .terraform.lock.hcl  main.tf
terraform/medical_infra/: main.tf  start_script.sh
terraform/modules/flowertune_vm/: locals.tf  main.tf  start_script.sh  variables.tf
terraform/single_node_infra/: main.tf
workspace/evaluation/code/: README.md  main.py  requirements.txt
workspace/evaluation/medical/: requirements.txt
workspace/models/: README.md
workspace/models/Phi-4-mini-instruct-Coding/: README.md  pyproject.toml
workspace/models/Phi-4-mini-instruct-Coding/results/: comm_budget.txt  evaluation_results_humaneval.json  evaluation_results_mbpp.json  evaluation_results_multiple-cpp.json  evaluation_results_multiple-js.json  generations_humaneval.json  generations_mbpp.json  generations_multiple-cpp.json  generations_multiple-js.json  gpu_budget.txt  train_loss.txt
workspace/models/Qwen2.5-0.5B-Instruct-Coding/: README.md  pyproject.toml
workspace/models/Qwen2.5-0.5B-Instruct-Coding/results/: comm_budget.txt  evaluation_results_humaneval.json  evaluation_results_mbpp.json  evaluation_results_multiple-cpp.json  evaluation_results_multiple-js.json  generations_humaneval.json  generations_mbpp.json  generations_multiple-cpp.json  generations_multiple-js.json  references_humaneval.json  references_mbpp.json  references_multiple-cpp.json  references_multiple-js.json  train_loss.txt
workspace/models/Qwen2.5-1.5B-Instruct-Coding/: README.md  pyproject.toml
workspace/models/Qwen2.5-1.5B-Instruct-Coding/results/: comm_budget.txt  evaluation_results_humaneval.json  evaluation_results_mbpp.json  evaluation_results_multiple-cpp.json  evaluation_results_multiple-js.json  train_loss.txt  (+4 more)
workspace/models/Qwen2.5-7B-Instruct-Coding/: README.md  pyproject.toml
workspace/models/Qwen3-0.6B-Medical/: README.md  comm_budget.txt  pyproject.toml
workspace/models/Qwen3-4B-Coding/: README.md  pyproject.toml
workspace/models/Qwen3-8B-Coding/: README.md  pyproject.toml
workspace/models/SmolLM2-1.7B-Instruct-Coding/: README.md  pyproject.toml
workspace/models/phi-4-Coding/: README.md  pyproject.toml
(+41 files in other folders)
